# cabocha-rs

./: Cargo.toml  LICENSE  LISENCE  README.md  circle.yml
.github/workflows/: test.yml
examples/: test.rs
src/: cabocha.rs  chunk.rs  consts.rs  lib.rs  parser.rs  sys.rs  token.rs  tree.rs  utils.rs
