[package]
name = "cabocha"
license = "MIT"
version = "0.1.5"
authors = ["Yasu_umi Nishikawa <yasu.umi.19910101@gmial.com>"]
description = "Safe Rust wrapper for cabocha a japanese language dependency structure analyzer library"
documentation = "https://github.com/Yasu-umi/cabocha-rs"
homepage = "https://github.com/Yasu-umi/cabocha-rs"
repository = "https://github.com/Yasu-umi/cabocha-rs"
readme = "README.md"
keywords = ["cabocha", "japanese", "dependency", "structure", "analyzer"]
