[package]
name = "cabocha"
license = "MIT"
version = "0.2.0"
authors = ["Yasu_umi Nishikawa <yasu.umi.19910101@gmial.com>"]
description = "Safe Rust wrapper for cabocha a japanese language dependency structure analyzer library"
documentation = "https://docs.rs/cabocha"
repository = "https://github.com/Yasu-umi/cabocha-rs"
readme = "README.md"
categories = ["text-processing"]
keywords = ["cabocha", "japanese", "dependency", "structure", "analyzer"]
edition = "2018"

[dependencies]
libc = "0.2.66"
